tests/NormalTests/paczka1/small_fuzzy/90980092.err
Error in line 4: uI52ufBWb A943 95,5
Error in line 13: t9Wys7 A49 44,02
Error in line 2: t9Wys7 S611 80,8
